# game-helper

./: .gitignore  .pylintrc  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: build-push-image-on-release.yml
src/: FrontTask.py  Market.py  Messager.py  Sb.py  Task.py  UWTask.py  guiUtils.py  images.py  main.py  mainThread.py  playground.py  pyauto.py  run.py  runGui.py  test.py  utils.py  windows.py
src/EVE/: BattleTask.py  EVETask.py  EveRunner.py  MiningTask.py  enemyChecker.py  mainThread.py
src/UW/: Battle.py  Fashion.py  InvestmentTrip.py  Market.py  Messager.py  Sb.py  UWLauncher.py  UWPropsLauncher.py  UWTask.py  archivedCode.py  constants.py  dailyConfFile copy.json  dailyCrob.bat  monitoredBattle.py  multiProcess.py  resetBlackMarketJson.py  resetDailyJsons.py  test.py
src/utils/: FrontTask.py  Messager.py  guiUtils.py  images.py  test.py  utils.py  windows.py
