[tool.poetry]
name = "evehelper2"
version = "0.1.0"
description = ""
authors = ["sd890623 <sd890623@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
